--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -9,11 +9,12 @@ django-modeltranslation
 django-multiselectfield
 django_ical
 django_select2
-amqp
-celery
 mozilla-django-oidc
 pillow
 python-magic
 pyyaml
 reportlab
 xlsxwriter
+celery<5.0.0
+vine<5.0.0  # added due to celery
+amqp<5.0.0  # pinned due to celery
